Add getAllDailyWisdom and dailyWisdomList.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,10 @@
 
 <h1 class="mb-4">Welcome to Daily Wisdom</h1>
 
-<a href="/dailywisdom" class="btn btn-success btn-lg">Get Today's Wisdom</a>
+<div class="d-flex flex-column gap-3" style="max-width: 300px;">
+    <a href="/dailywisdom" class="btn btn-success btn-lg flex-grow-1">Get Today's Wisdom</a>
+    <a href="all" class="btn btn-success btn-lg flex-grow-1">View All Wisdom</a>
+</div>
 
 </body>
 </html>
