add show-image method and html

--- a/src/main/resources/templates/imageupload/index.html
+++ b/src/main/resources/templates/imageupload/index.html
@@ -23,6 +23,7 @@
                         <input type="file" name="image" id="image" accept="image/*" class="form-control" required>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Upload Image</button>
+                    <a href="/show-images" class="btn btn-secondary mt-3">Show Uploaded Images</a>
                 </form>
             </div>
         </div>
