add button to wimages on index.html, add hover effect on pictures

--- a/src/main/resources/templates/imageupload/index.html
+++ b/src/main/resources/templates/imageupload/index.html
@@ -24,6 +24,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Upload Image</button>
                     <a href="/show-images" class="btn btn-secondary mt-3">Show Uploaded Images</a>
+                    <a href="/" class="btn btn-primary mt-3">Back</a>
                 </form>
             </div>
         </div>
