refactor names and remove image texts

--- a/src/main/resources/templates/imageUpload.html
+++ b/src/main/resources/templates/imageUpload.html
@@ -9,7 +9,7 @@
                     <div class="form-group">
                         <input type="file" name="image" accept="image/*" class="form-control-file">
                     </div>
-                    <button type="submit" class="btn btn-primary">Upload image</button>
+                    <button type="submit" class="btn btn-primary">Upload Wimage</button>
                 </form>
                 <span th:if="${msg != null}" th:text="${msg}"></span>
             </div>
