--- a/src/main/resources/templates/imageupload/index.html
+++ b/src/main/resources/templates/imageupload/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <h2 class="text-center">Upload Image</h2>
+                <h2 class="text-center">Upload Wimage</h2>
 
                 <!-- Success message -->
                 <p th:if="${msg}" th:text="${msg}" class="alert alert-success"></p>
@@ -22,8 +22,8 @@
                         <label for="image" class="form-label">Select an image to upload</label>
                         <input type="file" name="image" id="image" accept="image/*" class="form-control" required>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Upload Image</button>
-                    <a href="/show-images" class="btn btn-secondary mt-3">Show Uploaded Images</a>
+                    <button type="submit" class="btn btn-primary w-100">Upload Wimage</button>
+                    <a href="/show-images" class="btn btn-success mt-3">Show Uploaded Wimages</a>
                     <a href="/" class="btn btn-primary mt-3">Back</a>
                 </form>
             </div>
