change html view

--- a/src/main/resources/templates/imageupload/show-images.html
+++ b/src/main/resources/templates/imageupload/show-images.html
@@ -28,7 +28,7 @@
 
 <div class="container mt-5">
     <h2 class="text-center">Wimages</h2>
-    <a href="/uploadimage" class="btn btn-primary mb-3">Back to Upload</a>
+    <a href="/uploadimage" class="btn btn-primary mb-3">Upload Wimage</a>
 
     <div class="row">
         <div th:each="image : ${images}" class="col-md-4 mb-3">
