--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <div class="d-flex flex-column gap-3" style="max-width: 300px;">
     <a href="/dailywisdom" class="btn btn-success btn-lg flex-grow-1">Get Today's Wisdom</a>
     <a href="all" class="btn btn-success btn-lg flex-grow-1">View All Wisdom</a>
-    <a href="upload" class="btn btn-success btn-lg flex-grow-1">Explore Wimages</a>
+    <a href="show-images" class="btn btn-success btn-lg flex-grow-1">Explore Wimages</a>
 </div>
 
 </body>
