Update SecurityConfig, add ApiAuthentication classes

--- a/src/main/resources/templates/imageupload/index.html
+++ b/src/main/resources/templates/imageupload/index.html
@@ -23,8 +23,7 @@
                         <input type="file" name="image" id="image" accept="image/*" class="form-control" required>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Upload Wimage</button>
-                    <a href="/show-images" class="btn btn-success mt-3">Show Uploaded Wimages</a>
-                    <a href="/" class="btn btn-primary mt-3">Back</a>
+                    <a href="/show-images" class="btn btn-success mt-3">Back to Wimages</a>
                 </form>
             </div>
         </div>
